syntax = "proto3";

import "stdSignature.proto";
import "msg_vote.proto";

message StdTx {
  repeated Vote msg = 1; // array of size 1, containing the transaction message, which are one of the transaction type below. please check the above "Array Encoding"
  repeated StdSignature signatures = 2; // array of size 1, containing the standard signature structure of the transaction sender
  string memo = 3; // a short sentence of remark for the transaction. Please only `Transfer` transaction allows 'memo' input, and other transactions with non-empty `Memo` would be rejected.
  int64 source = 4; // an identifier for tools triggerring this transaction, set to zero if unwilling to disclose.
  bytes data = 5; //byte array, reserved for future use
}